--- a/software_dev_resume.tex
+++ b/software_dev_resume.tex
@@ -95,11 +95,11 @@
     \end{itemize}
 
 
-\input{resume_work_history}
+\input{work_history}
 
-\input{resume_education}
+\input{education}
 
-\input{resume_other_skills}
+\input{other_skills}
 
 \end{resume}
 \end{document}
