--- a/sysadmin_resume.tex
+++ b/sysadmin_resume.tex
@@ -91,11 +91,11 @@
     \end{itemize}
 
 
-\input{resume_work_history}
+\input{work_history}
 
-\input{resume_education}
+\input{education}
 
-\input{resume_other_skills}
+\input{other_skills}
 
 \end{resume}
 \end{document}
