New Summary statement; removed spacing modifiers now that I no longer have the goal of limiting myself to one page.

--- a/software_dev_resume.tex
+++ b/software_dev_resume.tex
@@ -12,16 +12,25 @@
 %\sectionwidth=1.5in
 %\resumewidth=8in
 
-\input{resume_header}
+\input{header}
  
 \begin{resume}
  
 \section{SUMMARY}
-    Knowledgeable Python engineer with background in integration and
-    administration of hardware and software systems in heterogeneous
-    environments seeks opportunity to further develop software architecture
-    and engineering ability while leveraging extensive language knowledge
-    and adept problem-solving skills.
+    % I want to solve interesting, complex problems, mostly with software.
+    Software Engineer with a background of systems integration and
+    administration in heterogeneous environments seeks opportunity to
+    further develop architectural skills while leveraging existing
+    knowledge and abilities to provide dynamic solutions to a diverse
+    range of challenges.
+
+
+%    % Python specific
+%    Knowledgeable Python engineer with background in integration and
+%    administration of hardware and software systems in heterogeneous
+%    environments seeks opportunity to further develop software architecture
+%    and engineering ability while leveraging extensive language knowledge
+%    and adept problem-solving skills.
 
 
 \section{TECHNICAL \\ EXPERTISE}
@@ -32,9 +41,10 @@
     Software Engineering:
     \vspace{1 mm}
     \begin{itemize}
-        \itemsep -1.5pt % Reduce space between items
+        %\itemsep -1.5pt % Reduce space between items
         \item Designed and deployed local and remote APIs used in
             production services.
+        %\item Designed, created and deployed APIs
         \item Created integrated interfaces for relational and
             non-relational databases.
         \item Leveraged existing APIs to create interoperability between
@@ -47,15 +57,15 @@
         \item Contributed patches for features and bug-fixes to upstream
             repositories.
         \item Advanced knowledge and experience with Python, intermediate
-            to novice skill with bash, PHP, JavaScript, .NET, PowerShell,
-            Java, C.
+            to novice skill with bash, JavaScript, C, .NET, PHP, PowerShell,
+            Java.
     \end{itemize}
-    \vspace{-3 mm}
+    %\vspace{-3 mm}
 
     Systems Engineering and Administration:
     \vspace{1 mm}
     \begin{itemize}
-        \itemsep -1.5pt % Reduce space between items
+        %\itemsep -1.5pt % Reduce space between items
         \item Designed and maintained web APIs, storage, authentication \&
             authorization, network connectivity, monitoring, security, and
             virtual machine infrastructure.
@@ -70,7 +80,7 @@
     Peer Communications:
     \vspace{1 mm}
     \begin{itemize}
-        \itemsep -1.5pt %reduce space between items
+        %\itemsep -1.5pt %reduce space between items
         \item Collaborated with peers in local groups, mailing lists and
         IRC channels.
         \item Presented unique solutions to challenges for professional
@@ -81,12 +91,12 @@
         \item Ensured documentation had appropriate level of detail for
         various audiences.
     \end{itemize}
-    \vspace{-3 mm}
+    %\vspace{-3 mm}
 
     User Support:
     \vspace{1 mm}
     \begin{itemize}
-        \itemsep -1.5pt %reduce space between items
+        %\itemsep -1.5pt %reduce space between items
         \item Accommodated vastly differing personalities, technical
         proficiencies, and communication styles while maintaining
         professionalism and courtesy.
