Updated! Now with more words! Better words!

--- a/software_dev_resume.tex
+++ b/software_dev_resume.tex
@@ -42,35 +42,56 @@
     \vspace{1 mm}
     \begin{itemize}
         %\itemsep -1.5pt % Reduce space between items
-        \item Designed and deployed local and remote APIs used in
-            production services.
-        %\item Designed, created and deployed APIs
-        \item Created integrated interfaces for relational and
-            non-relational databases.
-        \item Leveraged existing APIs to create interoperability between
-            disparate software.
-        \item Focused on usability as well as functionality when designing
-            both UIs and APIs.
-        \item Evaluated options in the solution domain to determine best
-            approach to satisfy project requirements given available
-            resources, both internal and external.
-        \item Contributed patches for features and bug-fixes to upstream
-            repositories.
+        \item Designed and deployed APIs used in production services,
+            including local libraries as well as RESTful remote access.
+        \item Created integrated database architecture and interfaces for
+            relational and key-value databases.
+        \item Leveraged existing APIs, both local \& remote, to create
+            interoperability and data passage between disparate systems,
+            both vendor supplied and open-source.
+        \item Applied focus on usability as well as functionality to
+            designs of User Interfaces, including GUIs, CLIs, APIs, and
+            hardware interactions.
+        \item Evaluated available frameworks and existing software
+            solutions relevant to the problem domain to select and
+            implement the best approach in balancing project requirements
+            and accessible resources.
+        \item Ensured source code security and enabled developer
+            collaboration by using Version Control Systems, distributed
+            and not.
+        \item Contributed feedback and patches for features and bug-fixes
+            to upstream open-source repositories.
+        \item Maintained high levels of code reuse and readability by
+            leveraging design patterns and strategies to help ensure
+            proper separation of concerns and modularity.
         \item Advanced knowledge and experience with Python, intermediate
             to novice skill with bash, JavaScript, C, .NET, PHP, PowerShell,
             Java.
     \end{itemize}
-    %\vspace{-3 mm}
 
-    Systems Engineering and Administration:
+    Systems Integration and Administration:
     \vspace{1 mm}
     \begin{itemize}
-        %\itemsep -1.5pt % Reduce space between items
-        \item Designed and maintained web APIs, storage, authentication \&
-            authorization, network connectivity, monitoring, security, and
-            virtual machine infrastructure.
-        \item Architected and engineered improvements to physical and
-            logical networks.
+        \item Designed, deployed, and maintained services providing
+            user authentication \& authorization, file storage \& backup,
+            network connectivity \& security, and web presence.
+        \item Configured system interoperability to provide access to user
+            data between disparate operating systems.
+        \item Managed virtual machine and cloud infrastructure to mitigate
+            hardware needs using a variety of commercial providers as well
+            as internal services.
+        \item Integrated custom hardware and software with commercial
+            solutions to create new functionality and novel application.
+        \item Improved efficiency and consistency of software installation
+            and administration by leveraging modern deployment and
+            configuration management tools.
+        \item Designed, managed and improved monitoring and notification
+            services by moving to a modern software solution and creating
+            custom plugins.
+        \item Managed physical and logical networks to improve topology
+            and security.
+        \item Implemented and maintained border and host firewalls using
+            both specialized and commodity hardware and software.
         \item Procured, repaired, managed, and deployed server and
             consumer hardware.
     \end{itemize}
@@ -82,14 +103,17 @@
     \begin{itemize}
         %\itemsep -1.5pt %reduce space between items
         \item Collaborated with peers in local groups, mailing lists and
-        IRC channels.
+            IRC channels.
         \item Presented unique solutions to challenges for professional
-        and enthusiast groups.
+            and enthusiast groups.
+        \item Exhibited interactive systems consisting of integrated custom
+            \& commercial hardware \& software and facilitated public use
+            of the system.
         \item Updated and created documentation focusing on concise
-        explanation for design decisions as well as detailed usage
-        instructions.
+            explanation for design decisions as well as detailed usage
+            instructions.
         \item Ensured documentation had appropriate level of detail for
-        various audiences.
+            various audiences.
     \end{itemize}
     %\vspace{-3 mm}
 
@@ -98,10 +122,10 @@
     \begin{itemize}
         %\itemsep -1.5pt %reduce space between items
         \item Accommodated vastly differing personalities, technical
-        proficiencies, and communication styles while maintaining
-        professionalism and courtesy.
+            proficiencies, and communication styles while maintaining
+            professionalism and courtesy.
         \item Received verbal and written praise from users for both
-        responsiveness and level of support provided.
+            responsiveness and level of support provided.
     \end{itemize}
 
 
