Updated resume last summer, forgot to check in.

--- a/software_dev_resume.tex
+++ b/software_dev_resume.tex
@@ -72,22 +72,22 @@
     Systems Integration and Administration:
     \vspace{1 mm}
     \begin{itemize}
+        \item Configured system interoperability to provide access to user
+            data between disparate operating systems.
+        \item Integrated custom hardware and software with commercial
+            solutions to create new functionality and novel application.
         \item Designed, deployed, and maintained services providing
             user authentication \& authorization, file storage \& backup,
             network connectivity \& security, and web presence.
-        \item Configured system interoperability to provide access to user
-            data between disparate operating systems.
         \item Managed virtual machine and cloud infrastructure to mitigate
             hardware needs using a variety of commercial providers as well
             as internal services.
-        \item Integrated custom hardware and software with commercial
-            solutions to create new functionality and novel application.
         \item Improved efficiency and consistency of software installation
             and administration by leveraging modern deployment and
             configuration management tools.
         \item Designed, managed and improved monitoring and notification
             services by moving to a modern software solution and creating
-            custom plugins.
+            custom plug-ins.
         \item Managed physical and logical networks to improve topology
             and security.
         \item Implemented and maintained border and host firewalls using
